@@ -1,5 +1,10 @@
 2005-02-23  Per Bothner  <per@bothner.com>
 
+	* kawa/lang/Quote.java: Add an option to not namespace-expand.
+	(quote): Add overload.  Change to not namespace-expand.
+	* kawa/lang/Macro.java (expand): If ! hygienic, use Quote.quote to
+	in-depth remove SyntaxForm, rather than only doing it shallowly.
+
 	* kawa/lang/Translator.java (namespaceResolve): Only coerce String,
 	FString, and Symbol with empty emptyspace to namespace uri.
 	Specifically, don't coerce a <ClassType> at this point.
